add support for knock-out stage quotes

--- a/WMTippApp/Web.config
+++ b/WMTippApp/Web.config
@@ -10,9 +10,9 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="MembershipConnection" connectionString="Data Source=NB-YOGA\SQLEXPRESS;Initial Catalog=bulimemdb;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="DataConnection" connectionString="Data Source=NB-YOGA\SQLEXPRESS;Initial Catalog=wmdatadb;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="testEntities" connectionString="metadata=res://*/Models.Test.csdl|res://*/Models.Test.ssdl|res://*/Models.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NB-YOGA\SQLEXPRESS;initial catalog=wmdatadb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MembershipConnection" connectionString="Data Source=NIG-HOME;Initial Catalog=bulimemdb;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DataConnection" connectionString="Data Source=NIG-HOME;Initial Catalog=wmdatadb;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="testEntities" connectionString="metadata=res://*/Models.Test.csdl|res://*/Models.Test.ssdl|res://*/Models.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NIG-HOME;initial catalog=wmdatadb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
